RESOLVED FIXED134321
[WK2] Shadow layer is in the wrong place while pinch-zooming
https://bugs.webkit.org/show_bug.cgi?id=134321
Summary [WK2] Shadow layer is in the wrong place while pinch-zooming
Tim Horton
Reported 2014-06-25 17:52:13 PDT
The geometry changed and we didn't notice because of extended background mode.
Attachments
patch (2.82 KB, patch)
2014-06-25 17:53 PDT, Tim Horton
mitz: review+
Tim Horton
Comment 1 2014-06-25 17:53:57 PDT
Tim Horton
Comment 2 2014-06-25 17:56:21 PDT
Note You need to log in before you can comment on or make changes to this bug.