[WK2] Shadow layer is in the wrong place while pinch-zooming https://bugs.webkit.org/show_bug.cgi?id=134321

Reviewed by Dan Bernstein.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::applyTransientZoomToLayers):
(WebKit::TiledCoreAnimationDrawingArea::commitTransientZoom):
(WebKit::TiledCoreAnimationDrawingArea::applyTransientZoomToPage):
The anchor point of the shadow layer changed, so we no longer need to shift our position to the center.


Canonical link: https://commits.webkit.org/152302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170453 268f45cc-cd09-0410-ab3c-d52691b4dbfc